#AC_INIT(libUseful,colums.projects@googlemail.com,,http://sites.google.com/site/columscode) 
AC_INIT(defines.h)

VERSION="0.0.1" 
AC_SUBST(VERSION) 

AC_PROG_CC 
AC_LANG_C 
AC_PROG_MAKE_SET 
AC_HEADER_STDC 

cf_have_libssl=no
cf_have_libcrypto=no
cf_have_libz=no
cf_have_oss=no
cf_have_libesd=no

AC_ARG_ENABLE(ssl, [  --enable-ssl       use Secure Sockets Layer], cf_use_ssl=$enableval )

if test "$cf_use_ssl" = "yes"
then
AC_CHECK_LIB(ssl,SSL_library_init,,)
cf_have_libssl=$ac_cv_lib_ssl_SSL_library_init

AC_CHECK_LIB(z,deflate,,)
cf_have_libz=$ac_cv_lib_z_deflate

AC_CHECK_LIB(crypto,EVP_CIPHER_CTX_init,,)
cf_have_libcrypto=$ac_cv_lib_crypto_EVP_CIPHER_CTX_init
fi


AC_ARG_ENABLE(oss, [  --enable-oss       use Open Sound System], cf_use_oss=$enableval )

if test "$cf_use_oss" = "yes"
then
AC_CHECK_HEADER(sys/soundcard.h,AC_DEFINE([HAVE_OSS]),cf_have_oss=no,)
fi


AC_CHECK_LIB(esd,esd_open_sound,,)
cf_have_libesd=$ac_cv_lib_esd_esd_open_sound


echo
echo "*************  RESULTS **************"
echo "Secure Sockets Support:		$cf_have_libssl" 
echo "Cryptography Support:		$cf_have_libcrypto" 
echo "Zlib compression Support:	$cf_have_libz" 
echo "OSS Support:			$cf_have_oss" 
echo "Esound Support:			$cf_have_libesd" 
echo "*************************************"
echo


dnl read Makefile.in and write Makefile 
AC_OUTPUT(Makefile)
